--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -30,6 +30,8 @@ $brown: #8f5536;
     
     --color-code: #fdf0f0;
     --color-corporativo: #aa3d74;
+    --color-corporativo-bg: #aa3d74;
+    --bg-color: #fff;
     --link-color: #2179BF;
     --form-bg-color: #f2f2f2;
     --form-border-color: #f2f2f2;
